--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://pops08.github.io/ReactPortfolio/",
   "name": "react-portfolio",
   "version": "0.1.0",
   "private": true,
